            Graphics: drawImage now honours arraybuffer offsets
            Graphics: drawImage now supports up to 4bpp palettes rendered direct from flash
            Bangle.js2: Larger font for E.showMenu
            Graphics: drawString(..., true) for vector fonts now clears the background
            nRF52: swap getSerial bytes around so device ID string matches nrfjprog
            
     2v10 : Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
            Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
            Bangle.js: Ignore touch and swipe events when the LCD is off
            Graphics: Fix 1bpp custom fonts on 2/4/8 bpp graphics Canvas not being the right colour
            Bangle.js: Don't reset all peripherals when loading a new app, and only
              turn peripherals off if unused 500ms after starting new app
            Increase max arguments for Function.apply from 64 to 256
            NRF52840: Create new NRF_GPIO_PIN_X_FAST as Nordic's gpio functions will no longer inline!
            Graphics: Add .blit() to allow fast blits within a single Graphics instance
            nRF52840: workaround for SDK15 bug that stops softdevice restart when WDT enabled
            Disallow template strings in object decls like {`hello`:1} (fix #2006)
            Bangle.js: Add support for global colour themes which affect g.clear/g.reset (fix #499)
            Bangle.js: Switch beep/buzz to IRQs (keeps time correct even when JS is busy)
            Add E.decodeUTF8 to allow UTF8 to be decoded into standard 8 bit characters
            Util timer: account for 'drift' in timer when adding new tasks if running it continuously
            Graphics: Allow 'scroll' method to only scroll inside clipRect
            Bangle.js: if we restart with home button held down, ignore the 'button up' event
            Remove Graphics.drawImages from non-Bangle.js builds to free up space